fix(image-teaser): [HAAR-3076] Reverted variable removal

--- a/view/frontend/templates/component/image_teaser/image_teaser_slide.phtml
+++ b/view/frontend/templates/component/image_teaser/image_teaser_slide.phtml
@@ -11,6 +11,7 @@ $contentAlign = $slide->getContentAlign();
 /**
  * Call to action properties.
  */
+$cta = $slide->getCta();
 $ctaLabel = $cta['label'] ?? '';
 $ctaHref = $cta['href'] ?? '';
 
