--- a/view/frontend/templates/component/image_teaser/image_teaser_slide.phtml
+++ b/view/frontend/templates/component/image_teaser/image_teaser_slide.phtml
@@ -12,8 +12,8 @@ $contentAlign = $slide->getContentAlign();
  * Call to action properties.
  */
 $cta = $slide->getCta();
-$ctaLabel = $cta['label'] ?? '';
-$ctaHref = $cta['href'] ?? '';
+$ctaLabel = $cta['label'] ?? NULL;
+$ctaHref = $cta['href'] ?? NULL;
 
 /**
  * Image properties with support for conditional lazy loading.
@@ -43,6 +43,8 @@ $openLinkInNewTab = $block->getOpenLinkInNewTab();
 
 $slogan = $slide->getSlogan();
 $description = $slide->getDescription();
+$hasCta = (!!$ctaHref && !!$ctaLabel);
+$ctaOnly = (!!$ctaHref && !!$ctaLabel && !$slogan && !$description);
 
 /**
  * Video Teaser
@@ -90,8 +92,8 @@ $slideClasses .= ' '.$slide->getCcCssClasses();
             ->toHtml();
         ?>
 
-        <?php if($slogan || $description || (!empty($ctaHref) && !empty($ctaLabel))): ?>
-            <figcaption class="cs-image-teaser__content-wrapper <?= isset($contentAlign['x']) ? 'cs-image-teaser__content-wrapper--content-align-x-' . $contentAlign['x'] : '';?> <?= isset($contentAlign['y']) ? ' cs-image-teaser__content-wrapper--content-align-y-' . $contentAlign['y'] : '';?> cs-image-teaser__content-wrapper--<?= $contentPlacement ?> <?= (!empty($ctaHref) && !empty($ctaLabel) && empty($slogan) && empty($description)) ? 'cs-image-teaser__content-wrapper--cta-only' : '';?>">
+        <?php if($slogan || $description || $hasCta): ?>
+            <figcaption class="cs-image-teaser__content-wrapper <?= isset($contentAlign['x']) ? 'cs-image-teaser__content-wrapper--content-align-x-' . $contentAlign['x'] : '';?> <?= isset($contentAlign['y']) ? ' cs-image-teaser__content-wrapper--content-align-y-' . $contentAlign['y'] : '';?> cs-image-teaser__content-wrapper--<?= $contentPlacement ?> <?= ($ctaOnly) ? 'cs-image-teaser__content-wrapper--cta-only' : '';?>">
                 <?= $this->getLayout()
                     ->createBlock(\Magento\Framework\View\Element\Template::class)
                     ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/contrast_overlay.phtml')
@@ -168,7 +170,7 @@ $slideClasses .= ' '.$slide->getCcCssClasses();
                         ->setContentPlacement($contentPlacement)
                         ->toHtml();
                     ?>
-                    <?php if(!empty($ctaHref) && !empty($ctaLabel)): ?>
+                    <?php if($hasCta): ?>
                         <?= $this->getLayout()
                             ->createBlock(\Magento\Framework\View\Element\Template::class)
                             ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/cta.phtml')
