Add content position modifier to wrapper

--- a/view/frontend/templates/component/image_teaser.phtml
+++ b/view/frontend/templates/component/image_teaser.phtml
@@ -143,6 +143,7 @@ $openLinkInNewTab = $block->getOpenLinkInNewTab() ? true : false;
             <div class="cs-image-teaser <?= $windowWidthClass ?>
                 cs-image-teaser--items-in-row-<?= $itemsPerRow ?>
                 cs-image-teaser--items-in-row-mobile-<?= $itemsPerRowMobile ?>
+                cs-image-teaser--content-<?= $contentPlacement ?>
                 <?= $isSlider ? 'cs-image-teaser--slider' : '' ?>
                 <?= $isSliderMobile ? 'cs-image-teaser--slider-mobile' : '' ?>
                 <?= $teaserWidth == 'window-slider' ? 'cs-image-teaser--full-width-slider' : '' ?>
