--- a/view/frontend/templates/component/button.phtml
+++ b/view/frontend/templates/component/button.phtml
@@ -6,7 +6,7 @@ $componentConfiguration = $block->getData();
 $viewModel = $block->getViewModel();
 $visibility = $block->getVisibilityClass();
 
-$componentClasses = $block->getSkipSpacing() ? ' cs-button--skip-spacing ' : ''; 
+$componentClasses = $block->getSkipSpacing() ? ' cs-button--skip-spacing ' : '';
 $componentClasses .= ' ' . $block->getVar('button/additional_css_classes');
 
 $containerClasses = $block->getContainerMix();
@@ -26,11 +26,12 @@ endif;
                 <?php endif; ?>
             </span>
             <?= $this->getLayout()
-                    ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
-                    ->setIconUrl($block->getVar('button/icon_path'))
-                    ->setCssClass('cs-button-component__icon')
-                    ->setInlined(true)
-                    ->toHtml(); 
+                ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                ->setIconUrl($block->getVar('button/icon_path'))
+                ->setCssClass('cs-button-component__icon')
+                ->setAltText(__('Button icon'))
+                ->setInlined(true)
+                ->toHtml();
             ?>
         </a>
     </div>
