--- a/view/frontend/templates/component/product_carousel.phtml
+++ b/view/frontend/templates/component/product_carousel.phtml
@@ -8,20 +8,16 @@ $visibility = $block->getVisibilityClass();
 
 $useWholeScreen = $block->getVar('product_carousel/use_whole_screen') == 'true';
 $viewMode = $block->getData('view_mode') ?? 'grid';
-$isList = $viewMode == 'list' ? true : false;
 
 $componentClasses = $block->getSkipSpacing() ? ' cs-products-carousel--skip-spacing' : '';
 $componentClasses .= ' ' . $block->getVar('product_carousel/additional_css_classes');
-$componentClasses .= ' ' . 'cs-products-carousel--' . $viewMode;
 
 $containerClasses = $block->getContainerMix();
 if (isset($componentConfiguration['cc_css_classes'])):
     $containerClasses .= ' ' . $componentConfiguration['cc_css_classes'];
 endif;
 
-$viewMode = $block->getData('view_mode') ?? 'grid';
 $products = $viewModel->getProducts();
-$isSliderMobile = $block->getData('carousel_on_mobile');
 
 // Build JS config
 $jsSettings = $block->getVar('product_carousel/js');
@@ -47,7 +43,7 @@ if ($useWholeScreen) {
     <?php if(!$useWholeScreen): ?>
         <div class="cs-container__inner">
     <?php endif; ?>
-        <div class="cs-products-carousel<?= $componentClasses ?>" data-view-mode=<?= $viewMode; ?> data-mage-init='{ "ccProductsCarousel": <?= json_encode($jsSettings) ?> }'>
+        <div class="cs-products-carousel<?= $componentClasses ?>" data-mage-init='{ "ccProductsCarousel": <?= json_encode($jsSettings) ?> }'>
             <div class="cs-products-carousel__slides-wrapper">
                 <?php if ($block->getVar('product_carousel/navigation/show')): ?>
                     <button class="cs-products-carousel__nav cs-products-carousel__nav--prev cs-slider-navigation cs-slider-navigation--prev <?= $block->getVar('product_carousel/navigation/arrows/prev/additional_css_classes') ?>" disabled type="button">
@@ -61,9 +57,9 @@ if ($useWholeScreen) {
                         ?>
                     </button>
                 <?php endif; ?>
-                <ul class="<?php if ($isList): ?>cs-products-list <?php endif; ?><?php if ($isSliderMobile == 'true'): ?>cs-products-list--carousel <?php endif; ?>cs-products-carousel__slides">
+                <ul class="cs-products-carousel__slides">
                     <?php foreach ($products as $product): ?>
-                        <li class="<?php if ($isList): ?>cs-products-list__item <?php endif; ?>cs-products-carousel__slide">
+                        <li class="cs-products-carousel__slide">
                             <div class="cs-products-carousel__product-tile">
                                 <?= $viewModel->renderProductTile($product, null, $viewMode) ?>
                             </div>
