--- a/view/frontend/templates/component/image_teaser.phtml
+++ b/view/frontend/templates/component/image_teaser.phtml
@@ -65,6 +65,8 @@ if (isset($imageTeaser['cc_css_classes'])):
     $containerClasses .= ' ' . $imageTeaser['cc_css_classes'];
 endif;
 
+$eagerLoadFirstImage = $componentType == 'hero_carousel' ? $block->getVar('hero_carousel/eager_load_first_image') : false;
+
 // Init JS config
 $jsSettings = $block->getVar('image_teaser/js');
 if (empty($jsSettings)) {
@@ -174,11 +176,9 @@ $openLinkInNewTab = $block->getOpenLinkInNewTab() ? true : false;
                     <?php endif; ?>
 
                     <ul class="cs-image-teaser__slides cs-image-teaser__slides<?= $mosaicProportions != '' ? ' cs-image-teaser__slides--mosaic-scenario-' . $mosaicProportions : '' ?> <?= $componentType == 'teaser_and_text' ? 'cs-image-teaser__slides--mobile_' . $mobileLayout : '' ?>">
-                        <?php 
-                            $slideIndex = 0; 
-                            $isHeroFirstImage = $componentType == 'hero_carousel' && $slideIndex == 0 ? true : false;
-                        ?>
+                        <?php $slideIndex = 0; ?>
                         <?php foreach ($slides as $slide): ?>
+                            <?php $isFirstImage = $slideIndex == 0 ? true : false; ?>
                             <?= $this->getLayout()
                                 ->createBlock(\Magento\Framework\View\Element\Template::class)
                                 ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/image_teaser_slide.phtml')
@@ -189,7 +189,8 @@ $openLinkInNewTab = $block->getOpenLinkInNewTab() ? true : false;
                                 ->setContentPlacement($contentPlacement)
                                 ->setOpenLinkInNewTab($openLinkInNewTab)
                                 ->setSlideIndex($slideIndex)
-                                ->setIsHeroFirstImage($isHeroFirstImage)
+                                ->setIsFirstImage($isFirstImage)
+                                ->setEagerLoadFirstImage($eagerLoadFirstImage)
                                 ->toHtml();
                             ?>
                             <?php $slideIndex++; ?>
