--- a/view/frontend/templates/component/daily_deal_teaser/daily_deal_stock_status.phtml
+++ b/view/frontend/templates/component/daily_deal_teaser/daily_deal_stock_status.phtml
@@ -13,9 +13,12 @@ $product = $viewModel->getProduct();
 
         <div class="cs-daily-deal-teaser__progress-bar">
             <div class="cs-cart-bonus__progress-wrapper cs-daily-deal-teaser__progress-bar-content">
-                <?php 
-                $percentage=(((int)$product['dailyDealOffer']['items'] / (int)$product['dailyDealOffer']['initialAmount']) * 100) / 100;
-                $transforming=(1 - $percentage) / 2 / $percentage * 100
+                <?php
+                $initialAmount = (int)$product['dailyDealOffer']['initialAmount'];
+                $items = (int)$product['dailyDealOffer']['items'];
+
+                $percentage = $initialAmount !== 0 ? $items / $initialAmount : 0;
+                $transforming = $percentage !== 0 ? (1 - $percentage) / 2 / $percentage * 100 : 5000
                 ?>
                 <div class="cs-daily-deal-teaser__progress-bg">
                     <div class="cs-daily-deal-teaser__progress-possible">
